#372 - Refactored Api Response builder