@@ -60,7 +60,6 @@ import java.time.Month;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
@@ -89,17 +88,15 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    * 
    * @param prefix {@link String}
    * @param testdatacount int
-   * @throws Exception Exception
    */
-  private void createTestData(final String prefix, final int testdatacount) throws Exception {
+  private void createTestData(final String prefix, final int testdatacount) {
     String userId = "jsmith";
     final int min10 = 10;
     LocalDateTime nowLocalDate = LocalDateTime.now(ZoneOffset.UTC).plusMinutes(min10);
 
-    final int max = testdatacount;
-    for (int i = 0; i < max; i++) {
+    for (int i = 0; i < testdatacount; i++) {
 
-      nowLocalDate = nowLocalDate.plus(1, ChronoUnit.MINUTES);
+      nowLocalDate = nowLocalDate.plusMinutes(1);
       Date d = Date.from(nowLocalDate.atZone(ZoneOffset.UTC).toInstant());
       getDocumentService().saveDocument(prefix, new DocumentItemDynamoDb("doc_" + i, d, userId),
           new ArrayList<>());
@@ -112,11 +109,10 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    * @param next {@link String}
    * @throws IOException IOException
    */
-  @SuppressWarnings("unchecked")
   private void expectNextPage(final String next) throws IOException {
     // given
     try (InputStream in = toStream("/request-get-documents-next.json")) {
-      String input = IoUtils.toUtf8String(in).replaceAll("\\{\\{next\\}\\}", next);
+      String input = IoUtils.toUtf8String(in).replaceAll("\\{\\{next}}", next);
       final InputStream instream2 =
           new ByteArrayInputStream(input.getBytes(StandardCharsets.UTF_8));
       ByteArrayOutputStream outstream = new ByteArrayOutputStream();
@@ -125,7 +121,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       getHandler().handleRequest(instream2, outstream, getMockContext());
 
       // then
-      String response = new String(outstream.toByteArray(), "UTF-8");
+      String response = outstream.toString(StandardCharsets.UTF_8);
 
       Map<String, String> m = fromJson(response, Map.class);
       DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
@@ -149,7 +145,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleDeleteDocument01() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -187,7 +182,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleDeleteDocument02() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -218,7 +212,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleDeleteDocument03() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -247,7 +240,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments01() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -257,7 +249,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -292,7 +284,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments02() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -310,7 +301,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
         getHandler().handleRequest(instream, outstream, getMockContext());
 
         // then
-        String response = new String(outstream.toByteArray(), "UTF-8");
+        String response = outstream.toString(StandardCharsets.UTF_8);
         Map<String, String> m = fromJson(response, Map.class);
 
         final int mapsize = 3;
@@ -335,7 +326,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments03() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -353,7 +343,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
         getHandler().handleRequest(instream, outstream, getMockContext());
 
         // then
-        String response = new String(outstream.toByteArray(), "UTF-8");
+        String response = outstream.toString(StandardCharsets.UTF_8);
         Map<String, String> m = fromJson(response, Map.class);
 
         final int mapsize = 3;
@@ -376,7 +366,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments04() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -413,7 +402,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments05() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -450,7 +438,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments06() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -491,7 +478,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments07() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -508,10 +494,10 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String documentId0 = ID.uuid();
       String documentId1 = ID.uuid();
       DocumentItemDynamoDb item0 = new DocumentItemDynamoDb(documentId0, date0, username);
-      item0.setContentLength(Long.valueOf(contentLength));
+      item0.setContentLength(contentLength);
 
       DocumentItemDynamoDb item1 = new DocumentItemDynamoDb(documentId1, date1, username);
-      item1.setContentLength(Long.valueOf(contentLength));
+      item1.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents-yesterday.json");
       addParameter(event, "siteId", siteId);
@@ -544,7 +530,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments08() throws Exception {
     // given
@@ -573,7 +558,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments09() throws Exception {
     // given
@@ -601,14 +585,12 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments10() throws Exception {
     // given
-    String siteId = null;
 
     ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents03.json");
-    addParameter(event, "siteId", siteId);
+    addParameter(event, "siteId", null);
     setCognitoGroup(event, "Finance");
 
     // when
@@ -632,14 +614,11 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments11() throws Exception {
     // given
-    String siteId = DEFAULT_SITE_ID;
-
     ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents03.json");
-    addParameter(event, "siteId", siteId);
+    addParameter(event, "siteId", DEFAULT_SITE_ID);
     setCognitoGroup(event, "Finance Bleh");
 
     // when
@@ -660,7 +639,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments12() throws Exception {
     // given
@@ -691,7 +669,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments13() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -721,7 +698,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments14() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -734,7 +710,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -765,7 +741,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments15() throws Exception {
 
@@ -778,7 +753,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -811,7 +786,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments16() throws Exception {
 
@@ -822,7 +796,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -844,7 +818,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleOptionsDocuments01() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -866,7 +839,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       // then
       Map<String, String> m = fromJson(response, Map.class);
 
-      final int mapsize = 3;
+      final int mapsize = 2;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
       assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
@@ -883,11 +856,9 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    */
   private ApiGatewayRequestEvent postDocumentsRequest(final String siteId, final String group,
       final String body) {
-    ApiGatewayRequestEvent event = new ApiGatewayRequestEventBuilder().method("post")
-        .resource("/documents").path("/documents").group(group).user("joesmith")
+    return new ApiGatewayRequestEventBuilder().method("post").resource("/documents")
+        .path("/documents").group(group).user("joesmith")
         .queryParameters(siteId != null ? Map.of("siteId", siteId) : null).body(body).build();
-
-    return event;
   }
 
   /**
@@ -895,7 +866,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments01() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1024,7 +994,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments02() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -1089,7 +1058,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments04() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -1120,7 +1088,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments05() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -1195,7 +1162,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments08() throws Exception {
     // given
@@ -1228,7 +1194,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments09() throws Exception {
     // given
@@ -1251,7 +1216,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments10() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1281,7 +1245,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       assertNotNull(documents.get(i).getString("uploadUrl"));
       assertNotNull(documents.get(i++).getString("documentId"));
       assertNotNull(documents.get(i).getString("uploadUrl"));
-      assertNotNull(documents.get(i++).getString("documentId"));
+      assertNotNull(documents.get(i).getString("documentId"));
 
       String documentId = documents.get(0).getString("documentId");
       String key = SiteIdKeyGenerator.createS3Key(siteId, documentId);
@@ -1294,7 +1258,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments11() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1334,7 +1297,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments12() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1368,7 +1330,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments15() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1420,7 +1381,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments16() throws Exception {
     // given
@@ -1460,7 +1420,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments17() throws Exception {
     // given
@@ -1478,7 +1437,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       Map<String, Object> data = fromJson(event.getBody(), Map.class);
       List<Map<String, Object>> metadata = new ArrayList<>();
       metadata.add(Map.of("key", "ad1", "value", filled));
-      metadata.add(Map.of("key", "ad2", "values", Arrays.asList(filled)));
+      metadata.add(Map.of("key", "ad2", "values", List.of(filled)));
 
       data.put("metadata", metadata);
       event.setBody(GsonUtil.getInstance().toJson(data));
@@ -1502,7 +1461,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments18() throws Exception {
     // given
